OAK-11646 : removed usage of ImmutableSet.of and its related unused imports