@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.segment.azure.v8;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import com.microsoft.azure.storage.StorageException;
 import com.microsoft.azure.storage.blob.*;
 import java.io.IOException;
@@ -72,7 +71,7 @@ public class AzureSegmentStoreV8Test {
 
     private static final EnumSet<SharedAccessBlobPermissions> READ_ONLY = EnumSet.of(READ, LIST);
     private static final EnumSet<SharedAccessBlobPermissions> READ_WRITE = EnumSet.of(READ, LIST, CREATE, WRITE, ADD);
-    private static final ImmutableSet<String> BLOBS = ImmutableSet.of("blob1", "blob2");
+    private static final Set<String> BLOBS = Set.of("blob1", "blob2");
 
     private CloudBlobContainer container;
     
